# AVTP

./: Cargo.toml  LICENSE  README.md  go.mod
src/: header.rs  lib.rs  main.rs  tcp_communication.rs
